# sat

./: .gitignore  Cargo.toml
src/: lib.rs  solver.rs
src/algorithms/: backtrack.rs  cdcl.rs  dpll.rs  lookahead.rs  watching.rs
src/algorithms/cdcl/: heap.rs
src/problems/: waerden.rs
src/utils/: buddy_memory.rs
