[package]
name = "sat"
version = "0.1.0"
authors = ["Mathias Soeken <mathias.soeken@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
itertools = "0.10.1"
log = "0.4.14"
rand = "0.8.4"
test-logger = "0.1.0"

